fix: catalog images size + align

--- a/src/components/Goods/GoodsItem.scss
+++ b/src/components/Goods/GoodsItem.scss
@@ -12,6 +12,7 @@
 
     img {
       display: block;
+      width: 100%;
       height: 400px;
       margin: 0 auto;
       object-fit: contain;
