--- a/src/components/Goods/GoodsList.scss
+++ b/src/components/Goods/GoodsList.scss
@@ -16,7 +16,7 @@
 
   &__goods-container {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     gap: 20px;
   }
 
